# daisy

./: .gitignore  Cargo.toml  README.md  build.rs  daisy.toml  flake.nix  rust-toolchain.toml
.direnv/: flake-profile-7-link
examples/basic/: index.ds
examples/site_1.0/: LICENSE_TEST  daisy.toml
examples/site_1.0/assets/: main.scss
examples/site_1.0/component/: title.ds  title_holder.ds
examples/site_1.0/site/: index.html
examples/site_1.0/src/: 404.ds  about.ds  index.ds  test.ds
examples/tests/: arithmetics.ds
src/: daisy.l  daisy.y  grammar.lalrpop  lib.rs  main.rs  prelude.rs
src/ast/: attribute.rs  element.rs  environment.rs  expression.rs  function.rs  html.rs  insert.rs  mod.rs  node.rs  statement.rs  str.rs  strings.rs  variable.rs
src/ast/builtin/: format.rs  import.rs  mod.rs  pages.rs  print.rs  replace.rs
src/ast/environment/: environment.rs  mod.rs  scope.rs  type.rs  value.rs
src/ast/expression/: addition.rs  and.rs  array.rs  call.rs  division.rs  equal.rs  greaterthan.rs  greaterthanorequal.rs  identifier.rs  lessthan.rs  lessthanorequal.rs  map.rs  mod.rs  multiplication.rs  notequal.rs  or.rs  scope_entry.rs  script.rs  subtraction.rs  value.rs
src/ast/node/: element.rs  insert.rs  logic.rs  mod.rs  (+1 more)
src/ast2/: mod.rs
src/cli/: build.rs  develop.rs  mod.rs
src/context/: environment.rs  file.rs  mod.rs  parser.rs  resolver.rs  resource.rs  variable.rs
src/node/: element.rs  mod.rs  root.rs  str.rs
src/parser/: attribute.rs  element.rs  mod.rs
src/resolver/: file.rs  mod.rs  resource.rs
src/tokenizer/: mod.rs  tokens.rs
(+65 files in other folders)
